syntax = "proto3";

package techcubing;

option java_package = "com.techcubing.proto";
option java_outer_classname = "RequestContextProto";

import "src/main/proto/options.proto";

message RequestContext {
  string device_id = 1 [(techcubing.message_type) = "techcubing.Device"];
}
